# DreamInEngine

./: .appveyor.yml  .doxygen.txt  .gitignore  .travis.yml  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: sprite2D.vert
src/: CMakeLists.txt  GLFWEnvironment.cpp  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  main.cpp
src/HUD/: ImGuiHUD.cpp
src/components/: CMakeLists.txt  Input.h  Sprite.h  Texture.h
src/entities/: CMakeLists.txt
src/events/: CMakeLists.txt
src/scenes/: SceneManager.cpp
src/utils/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  InputEnum.h  filesystem.h  fps.cpp  types.cpp  types.h
tools/: UtilFunctions.cmake
